# hello-ml

./: .envrc  .gitignore  .python-version  README.md  README.org  evaluation.org  flake.nix  optimization.org  regularization.org  requirements.txt  unsupervised-learning.org
FactorAnalysis/: Manifest.toml  Project.toml
FactorAnalysis/src/: FactorAnalysis.jl
classification/: classification1_perceptron.org  classification2_logistic_regression.org  classification3_logistic_polynomial_regression.org  notes.org
decision-tree/: main.py  pyproject.toml
decision-tree/decisiontree/: __init__.py
deep-learning-from-scratch/: .gitignore
deep-learning-from-scratch/ch01/: matplotlib.org  numpy.org
deep-learning-from-scratch/ch02/: perceptron.org
k-means/: main.py  pyproject.toml
knn/: main.py  pyproject.toml
linear-regression/: main.py  pyproject.toml
logistic-regression/: main.py  pyproject.toml
ml-lib/: pyproject.toml
ml-lib/src/mllib/: model_selection.py
ml-lib/tests/mllib/: test_metrics.py  test_model_selection.py
mllib/src/mllib/: datasets.py  metrics.py  validation.py
mllib/tests/mllib/: test_metrics.py
naive-bayes/: main.py  pyproject.toml
random-forest/: main.py  pyproject.toml
regression/: notes.org  regression1_linear.org  regression2_multiple_linear.org  regression2_polynomial.org  regression3_stochastic_gradient_descent.org
statistics/: requirements.txt
transformer/: hello.py  pyproject.toml
xgboost/: main.py  pyproject.toml
