[project]
name = "mllib"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Seong Yong-ju", email = "sei40kr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mllib"]

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "standard"
