[project]
name = "xgboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mllib",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "ucimlrepo>=0.0.7",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "standard"

[tool.uv.sources]
mllib = { path = "../mllib" }
